Version 3.2.0

- Added code for optimizing divides by integer powers of 2
- Fixed a bug printing non-ASCII characters
- Fixed several issues preventing the S3 source code from converting
  to C.
- Use C "switch" statements for Spin case where all the labels are
  constant
- Add basic common subexpression elimination option (--cse). This is
  not enabled by default because it still has some issues.

Version 3.1.3

- Use "res" for FCACHE space
- Fix bug involving local variables that are arrays
- Improve re-use of variable memory
- Optimize away some redundant branches

Version 3.1.2

- Use "res" instead of "long" to define the object block
- Slightly improve loop optimization by re-arranging optimize passes
- Fix multi-pin assignments to be atomic
- If fastspin.exe is invoked as bstc.exe, it tries to mimic bstc's
  output.

Version 3.1.1

- Make leaf functions share temporary registers and local variables
- Do not inline functions whose calling conventions
  require stack manipulation

Version 3.1.0

- Added (preliminary) --p2 support for Propeller 2.
- Added fcache support for Propeller 1.
- If a function is called only once, and we can eliminate it by
  inlining it, do so.
  
Version 3.0.6

- Added a check to make sure the immediate is on the right operand
  (previously "mov #2, 3" was parsed the same as "mov 2, #3")

Version 3.0.5

- Added --eeprom option to produce an EEPROM file
- Added --cc= option to change C compiler
- Improved optimization of pin masks in some cases
- Allow {++ ... } to insert C++/C code inside PUB or PRI.
- Changed the __SPIN2X__ define to __SPINCVT__. The old __SPIN2X__
  symbol is still defined in the preprocessor for now, but is deprecated.
- Added a fastspin front end that mimics the openspin arguments.

Version 3.0.4

- Tweaked a few items in the GUI

Version 3.0.3

- Fixed a problem with the round() function not being recognized in
  C/C++ code, and with round() and trunc() output.
- Fixed abort with no explicit expression in C/C++
